--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 </div>
             </li>
             <li class="nav-tabs">
-                <a class="first-tab" href="#">公司文化</a>
+                <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">物质文化</a></li>
-                        <li><a href="#">精神文化</a></li>
+                        <li><a href="#">新闻动态</a></li>
+                        <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
             </li>
