--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">公司介绍</a></li>
+                        <li><a href="./views/introduce.html">公司介绍</a></li>
                         <li><a href="#">精神文化</a></li>
                     </ul>
                 </div>
@@ -60,7 +60,7 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">新闻动态</a></li>
+                        <li><a href="./views/news.html">新闻动态</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
