--- a/index.html
+++ b/index.html
@@ -17,27 +17,27 @@
         <div class="con-header">
             <a class="logo" href="index.html"></a>
             <div class="nav-right">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                    <li><a href="#">Link</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="#">Action</a></li>
-                            <li><a href="#">Another action</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">Separated link</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">One more separated link</a></li>
-                        </ul>
-                    </li>
-                </ul>
+                <!--<ul class="nav navbar-nav">-->
+                    <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
+                    <!--<li><a href="#">Link</a></li>-->
+                    <!--<li class="dropdown">-->
+                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>-->
+                        <!--<ul class="dropdown-menu">-->
+                            <!--<li><a href="#">Action</a></li>-->
+                            <!--<li><a href="#">Another action</a></li>-->
+                            <!--<li><a href="#">Something else here</a></li>-->
+                            <!--<li role="separator" class="divider"></li>-->
+                            <!--<li><a href="#">Separated link</a></li>-->
+                            <!--<li role="separator" class="divider"></li>-->
+                            <!--<li><a href="#">One more separated link</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
+                <!--</ul>-->
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    <button type="submit" class="btn btn-default">搜索</button>
                 </form>
             </div>
         </div>
@@ -51,8 +51,13 @@
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="./views/introduce.html">公司介绍</a></li>
-                        <li><a href="#">精神文化</a></li>
+                        <li><a href="views/anenst/introduce.html">公司概况</a></li>
+                        <li><a href="#">总裁致辞</a></li>
+                        <li><a href="#">发展历史</a></li>
+                        <li><a href="#">集团架构</a></li>
+                        <li><a href="#">文化理念</a></li>
+                        <li><a href="#">员工风采</a></li>
+                        <li><a href="#">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -61,6 +66,7 @@
                 <div class="sec-tab">
                     <ul>
                         <li><a href="./views/news.html">新闻动态</a></li>
+                        <li><a href="./views/news.html">媒体报道</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
@@ -69,15 +75,31 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">洗面奶</a></li>
-                        <li><a href="#">护发素</a></li>
-                        <li><a href="#">面膜</a></li>
-                        <li><a href="#">蛋白粉</a></li>
+                        <li><a href="#">业务领域</a></li>
+                        <li><a href="#">产品展示</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="nav-tabs">
+                <a class="first-tab" href="#">社会责任</a>
+                <div class="sec-tab">
+                    <ul>
+                        <li><a href="#">爱心助学</a></li>
+                        <li><a href="#">慈善捐助</a></li>
+                        <li><a href="#">活动支持</a></li>
                     </ul>
                 </div>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">加入我们</a>
+                <div class="sec-tab">
+                    <ul>
+                        <li><a href="#">人才战略</a></li>
+                        <li><a href="#">员工成长</a></li>
+                        <li><a href="#">工作机会</a></li>
+                        <li><a href="#">联系hr</a></li>
+                    </ul>
+                </div>
             </li>
         </ul>
     </div>
@@ -334,26 +356,11 @@
                         <li><a href="gywm.php?fid=3947">公司概况</a></li>
                         <li><a href="gywm.php?fid=3948">总裁致辞</a></li>
                         <li><a href="gywm.php?fid=3949">发展历史</a></li>
-                        <li><a href="gywm.php?fid=3950">联系我们</a></li>
                         <li><a href="gywm.php?fid=4140">集团架构</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>企业文化</span>
-                <div class="list-link">
-                    <ul>
                         <li><a href="gywm.php?fid=3947">文化理念</a></li>
                         <li><a href="gywm.php?fid=3948">员工风采</a></li>
-                        <li><a href="gywm.php?fid=3949">精神文化</a></li>
-                    </ul>
-                </div>
-            </li>
-            <li><span>上市产品</span>
-                <div class="list-link">
-                    <ul>
-                        <li><a href="gywm.php?fid=3947">业务领域</a></li>
-                        <li><a href="gywm.php?fid=3948">产品展示</a></li>
-                        <li><a href="gywm.php?fid=3949">招商合作</a></li>
+                        <li><a href="gywm.php?fid=3950">联系我们</a></li>
+
                     </ul>
                 </div>
             </li>
@@ -363,6 +370,23 @@
                         <li><a href="gywm.php?fid=3947">新闻动态</a></li>
                         <li><a href="gywm.php?fid=3948">媒体报道</a></li>
                         <li><a href="gywm.php?fid=3949">专题报道</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>公司产品</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="gywm.php?fid=3947">业务领域</a></li>
+                        <li><a href="gywm.php?fid=3948">产品展示</a></li>
+                    </ul>
+                </div>
+            </li>
+            <li><span>社会责任</span>
+                <div class="list-link">
+                    <ul>
+                        <li><a href="gywm.php?fid=3947">爱心助学</a></li>
+                        <li><a href="gywm.php?fid=3948">慈善捐助</a></li>
+                        <li><a href="gywm.php?fid=3949">活动支持</a></li>
                     </ul>
                 </div>
             </li>
