--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/zui.min.css">
     <link rel="stylesheet" href="css/common.css">
     <script src="js/jquery-3.2.1.min.js"></script>
     <script src="js/bootstrap.js"></script>
+    <script src="js/zui.min.js"></script>
     <title>菲博特</title>
 </head>
 <body>
@@ -65,8 +67,8 @@
                 <a class="first-tab" href="#">媒体中心</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="./views/news.html">新闻动态</a></li>
-                        <li><a href="./views/news.html">媒体报道</a></li>
+                        <li><a href="views/media/news.html">新闻动态</a></li>
+                        <li><a href="views/media/news.html">媒体报道</a></li>
                         <li><a href="#">专题报道</a></li>
                     </ul>
                 </div>
