--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div class="header">
     <div class="contain">
         <div class="con-header">
-            <a class="logo" href="index.html"></a>
+            <a class="logo" href="../../../officialwebsite/index.html"></a>
             <div class="nav-right">
                 <!--<ul class="nav navbar-nav">-->
                     <!--<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>-->
@@ -47,19 +47,17 @@
     <div class="nav-tag">
         <ul class="nav nav-bar">
             <li class="nav-tabs">
-                <a class="first-tab active" href="#">首页</a>
+                <a class="first-tab active" href="../../../officialwebsite/index.html">首页</a>
             </li>
             <li class="nav-tabs">
                 <a class="first-tab" href="#">关于我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="views/anenst/introduce.html">公司概况</a></li>
-                        <li><a href="#">总裁致辞</a></li>
-                        <li><a href="#">发展历史</a></li>
-                        <li><a href="#">集团架构</a></li>
-                        <li><a href="#">文化理念</a></li>
-                        <li><a href="#">员工风采</a></li>
-                        <li><a href="#">联系我们</a></li>
+                        <li><a href="views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="views/anenst/history.html">发展历史</a></li>
+                        <li><a href="views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="views/anenst/contact.html">联系我们</a></li>
                     </ul>
                 </div>
             </li>
@@ -68,8 +66,8 @@
                 <div class="sec-tab">
                     <ul>
                         <li><a href="views/media/news.html">新闻动态</a></li>
-                        <li><a href="views/media/news.html">媒体报道</a></li>
-                        <li><a href="#">专题报道</a></li>
+                        <li><a href="views/media/media.html">媒体报道</a></li>
+                        <li><a href="views/media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
@@ -77,18 +75,18 @@
                 <a class="first-tab" href="#">公司产品</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">业务领域</a></li>
-                        <li><a href="#">产品展示</a></li>
+                        <li><a href="../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../officialwebsite/views/product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
             <li class="nav-tabs">
-                <a class="first-tab" href="#">社会责任</a>
+                <a class="first-tab" href="#">公司文化</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">爱心助学</a></li>
-                        <li><a href="#">慈善捐助</a></li>
-                        <li><a href="#">活动支持</a></li>
+                        <li><a href="views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
@@ -96,10 +94,9 @@
                 <a class="first-tab" href="#">加入我们</a>
                 <div class="sec-tab">
                     <ul>
-                        <li><a href="#">人才战略</a></li>
-                        <li><a href="#">员工成长</a></li>
-                        <li><a href="#">工作机会</a></li>
-                        <li><a href="#">联系hr</a></li>
+                        <li><a href="./views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="./views/join/recruit.html">工作机会</a></li>
+                        <li><a href="./views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
@@ -355,13 +352,11 @@
             <li><span>关于我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="gywm.php?fid=3947">公司概况</a></li>
-                        <li><a href="gywm.php?fid=3948">总裁致辞</a></li>
-                        <li><a href="gywm.php?fid=3949">发展历史</a></li>
-                        <li><a href="gywm.php?fid=4140">集团架构</a></li>
-                        <li><a href="gywm.php?fid=3947">文化理念</a></li>
-                        <li><a href="gywm.php?fid=3948">员工风采</a></li>
-                        <li><a href="gywm.php?fid=3950">联系我们</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/companyinfo.html">公司概况</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/speech.html">总裁致辞</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/history.html">发展历史</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/groupStructure.html">集团架构</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/contact.html">联系我们</a></li>
 
                     </ul>
                 </div>
@@ -369,35 +364,35 @@
             <li><span>媒体中心</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="gywm.php?fid=3947">新闻动态</a></li>
-                        <li><a href="gywm.php?fid=3948">媒体报道</a></li>
-                        <li><a href="gywm.php?fid=3949">专题报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/news.html">新闻动态</a></li>
+                        <li><a href="../../../officialwebsite/views/media/media.html">媒体报道</a></li>
+                        <li><a href="../../../officialwebsite/views/media/thematicReport.html">专题报道</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>公司产品</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="gywm.php?fid=3947">业务领域</a></li>
-                        <li><a href="gywm.php?fid=3948">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/business.html">业务领域</a></li>
+                        <li><a href="../../../officialwebsite/views/product/products.html">产品展示</a></li>
+                        <li><a href="../../../officialwebsite/views/product/cooperation.html">招商合作</a></li>
                     </ul>
                 </div>
             </li>
-            <li><span>社会责任</span>
+            <li><span>公司文化</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="gywm.php?fid=3947">爱心助学</a></li>
-                        <li><a href="gywm.php?fid=3948">慈善捐助</a></li>
-                        <li><a href="gywm.php?fid=3949">活动支持</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/culture.html">文化理念</a></li>
+                        <li><a href="../../../officialwebsite/views/anenst/mien.html">员工风采</a></li>
                     </ul>
                 </div>
             </li>
             <li><span>加入我们</span>
                 <div class="list-link">
                     <ul>
-                        <li><a href="gywm.php?fid=3947">人才战略</a></li>
-                        <li><a href="gywm.php?fid=3948">员工成才</a></li>
-                        <li><a href="gywm.php?fid=3949">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/talentStrategy.html">人才战略</a></li>
+                        <li><a href="../../../officialwebsite/views/join/recruit.html">工作机会</a></li>
+                        <li><a href="../../../officialwebsite/views/join/hr.html">联系hr</a></li>
                     </ul>
                 </div>
             </li>
